test/sema/struct_void_member_type.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s
struct S {
    nested: void,
    // CHECK: [[# @LINE - 1 ]]:5: error: struct field cannot be void
}

fn main() -> void {
}